--- a/webapi/Wallpaper.Net.WebApi/appsettings.json
+++ b/webapi/Wallpaper.Net.WebApi/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SqlServerConnection": "Data Source=xxx;Initial Catalog=xxx;User ID=sa;Password=xxx;Integrated Security=False;Column Encryption Setting=Enabled",
-  "AllowCors": [ "*" , "http://localhost:82" ],
+  "SqlServerConnection": "Data Source=42.192.86.8;Initial Catalog=hunjiAdmin;User ID=sa;Password=Vtu0NJ1qVtu0NJ1q;Integrated Security=False;Column Encryption Setting=Enabled",
+  "AllowCors": [ "*", "http://localhost:82" ],
   //JWT
   "Jwt": {
     "SecretKey": "8kh2luzmp0oq9wfbdeasygj647vr531n678fs",
