--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ bin-release/
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
 /webapi/Wallpaper.Net/ConsoleApp1
+/webapi/.vs/
+/web/node_modules/
+/web/uni_modules/*
