--- a/webapi/Wallpaper.Net.WebApi/appsettings.json
+++ b/webapi/Wallpaper.Net.WebApi/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SqlServerConnection": "Data Source=.;Initial Catalog=asda;User ID=sdsdas;Password=sdasd;Integrated Security=False;Column Encryption Setting=Enabled",
+  "SqlServerConnection": "Data Source=.;Initial Catalog=asda;User ID=sa;Password=123123123a;Integrated Security=False;Column Encryption Setting=Enabled",
   "AllowCors": [ "*", "http://localhost:82" ],
   //JWT
   "Jwt": {
