--- a/webapi/Wallpaper.Net.WebApi/Wallpaper.Net.WebApi.csproj
+++ b/webapi/Wallpaper.Net.WebApi/Wallpaper.Net.WebApi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
 	<Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
@@ -16,6 +16,10 @@
     <ProjectReference Include="..\Wallpaper.Net.Common\Wallpaper.Net.Common.csproj" />
     <ProjectReference Include="..\Wallpaper.Net.Repository\Wallpaper.Net.Repository.csproj" />
     <ProjectReference Include="..\Wallpaper.Net.Servers\Wallpaper.Net.Servers.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="logs\" />
   </ItemGroup>
 
 </Project>
