--- a/webapi/Wallpaper.Net.Service/Wallpaper.Net.Service.csproj
+++ b/webapi/Wallpaper.Net.Service/Wallpaper.Net.Service.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+	<PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.8.0" />
+	<PackageReference Include="SqlSugarCore" Version="5.1.4.128" />
   </ItemGroup>
 
 </Project>
