缓存的测试接口

--- a/webapi/Wallpaper.Net.WebApi/appsettings.Development.json
+++ b/webapi/Wallpaper.Net.WebApi/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SqlServerConnection": "Data Source=.;Initial Catalog=asda;User ID=sa;Password=123123123a;Integrated Security=False;Column Encryption Setting=Enabled",
+  "AllowCors": [ "*", "http://localhost:82" ],
+  //JWT
+  "Jwt": {
+    "SecretKey": "8kh2luzmp0oq9wfbdeasygj647vr531n678fs",
+    "Issuer": "WallpaperNetIssuer",
+    "Audience": "WallpaperNetAudience"
+  },
+  "Redis": {
+    "Enabled": false, // 是否启用 Redis 缓存
+    "Instance": "Simple",
+    "ConnectionString": "127.0.0.1:6379,password=123456,DefaultDatabase=6"
   }
 }
