--- a/webapi/Wallpaper.Net.Common/Wallpaper.Net.Common.csproj
+++ b/webapi/Wallpaper.Net.Common/Wallpaper.Net.Common.csproj
@@ -15,11 +15,19 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="SqlSugarCore" Version="5.1.4.128" />
+    <PackageReference Include="SqlSugarCore" Version="5.1.4.140" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
 	<PackageReference Include="UAParser" Version="3.1.47" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.17" />
+	<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
+
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ConfigOption\" />
   </ItemGroup>
 
 </Project>
