--- a/webapi/Wallpaper.Net.WebApi/appsettings.json
+++ b/webapi/Wallpaper.Net.WebApi/appsettings.json
@@ -12,5 +12,10 @@
     "SecretKey": "8kh2luzmp0oq9wfbdeasygj647vr531n678fs",
     "Issuer": "WallpaperNetIssuer",
     "Audience": "WallpaperNetAudience"
+  },
+  "Redis": {
+    "Enabled": false, // 是否启用 Redis 缓存
+    "Instance": "Simple",
+    "ConnectionString": "127.0.0.1:6379,password=123456,DefaultDatabase=6"
   }
 }
